<resources>
    <string name="app_name">SciKing</string>
    <string name="zero_percent">0 %</string>
    <string name="dash">-</string>
    <string name="change_theme_text">Light/Dark</string>
    <string name="app_logo_desc">App Logotype</string>
    <string name="image_button_desc">Image button icon</string>
    <string name="save_button_text">Save</string>
    <string name="login_button_text">Login</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="settings_button_desc">Settings Button Icon</string>
    <string name="profile_container_title">Profile container</string>
    <string name="open_auth_flow_button_text">Open auth flow</string>
    <string name="back_button_desc">Back button Icon</string>
    <string name="login_edit_text_hint">Login (only email)</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="email_edit_text_hint">Email</string>
    <string name="change_registration_to_login_button_text">Already have an account? Login</string>
    <string name="change_login_to_registration_button_text">Don\'t have account? Sign Up</string>
    <string name="logout_button_text">LogOut</string>
    <string name="choose_profile_picture_text">Tap on camera to choose profile picture</string>
    <string name="nickname_edit_text_hint">Enter Display Name</string>
    <string name="email_verified_text">Verified</string>
    <string name="registration_text">Registration</string>
    <string name="movie_deleted">"Successfully deleted"</string>
    <string name="undo">Undo</string>
</resources>