<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="signUpFragment"
            type="com.ilyasov.sci_king.presentation.fragments.SignUpFragment" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:focusableInTouchMode="true"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:scrollbarStyle="outsideOverlay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/match_constraint"
            android:background="?attr/windowBackground"
            android:orientation="vertical"
            android:tag="fragment_sign_up"
            tools:context="com.ilyasov.sci_king.presentation.RootActivity">

            <Space
                android:id="@+id/space_0"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/match_constraint"
                app:layout_constraintBottom_toTopOf="@+id/imgSciKingLogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgSciKingLogo"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_logo_desc"
                android:src="@drawable/ic_sci_king_logo_transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/space_0"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.8" />

            <TextView
                android:id="@+id/tvRegistration"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_15dp"
                android:text="@string/registration_text"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="?attr/textColorPrimary"
                android:textSize="@dimen/size_24sp"
                app:layout_constraintBottom_toTopOf="@+id/edtEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgSciKingLogo" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="@dimen/size_40dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_edit_text"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:hint="@string/email_edit_text_hint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColorHint="#AEABAB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRegistration"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.8" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="@dimen/size_40dp"
                android:layout_marginTop="@dimen/margin_25dp"
                android:background="@drawable/rounded_edit_text"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:hint="@string/password_edit_text_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColorHint="#AEABAB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEmail"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.8" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_15dp"
                android:text="@string/change_registration_to_login_button_text"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#AEABAB"
                android:onClick="@{() -> signUpFragment.onCLickLogin()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtPassword"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.8" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_38dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_7dp"
                android:background="@drawable/rounded_edit_text"
                android:text="@string/sign_up_button_text"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:onClick="@{() -> signUpFragment.onClickSignUp()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLogin"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.8" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>